# Safe-Toolbox-Plugin

./: CODEX_TASKS.md  KNOWN_BUGS.md  PROJECT_ROADMAP
Safe-Toolbox-GitHub-Upload/: .gitignore  ARCHIVE_GUIDE.md  CLAUDE_HANDOFF.md  CLAUDE_REVIEW_PACKAGE.md  CMakeLists.txt  README.md  RELEASE_HANDOFF.md  WORKTREE_STATE.txt
Safe-Toolbox-GitHub-Upload/Source/: SafeToolboxEditor.cpp  SafeToolboxEditor.h  SafeToolboxProcessor.cpp  SafeToolboxProcessor.h
Safe-Toolbox-GitHub-Upload/Source/DSP/: DcBlocker.cpp  DcBlocker.h  DelayProcessor.cpp  DelayProcessor.h  DriveProcessor.cpp  DriveProcessor.h  FilterProcessor.cpp  FilterProcessor.h  MeterState.cpp  MeterState.h  ReverbProcessor.cpp  ReverbProcessor.h  SafetyLimiter.cpp  SafetyLimiter.h  SampleSanitizer.h  SignalChain.cpp  SignalChain.h  WidthProcessor.cpp  WidthProcessor.h  WobbleProcessor.cpp  WobbleProcessor.h
Safe-Toolbox-GitHub-Upload/Source/Parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h  ParameterSnapshot.h  ParameterUtilities.h  PresetDefinitions.cpp  PresetDefinitions.h
Safe-Toolbox-GitHub-Upload/Source/UI/Assets/: AssetIds.h  AssetLoader.cpp  AssetLoader.h  BinaryDataMap.h
Safe-Toolbox-GitHub-Upload/Source/UI/Components/: HeaderComponent.cpp  HeaderComponent.h  MeterComponent.cpp  MeterComponent.h  ModulePanel.cpp  ModulePanel.h  PresetBarComponent.cpp  PresetBarComponent.h  SafeModePanel.cpp  SafeModePanel.h
Safe-Toolbox-GitHub-Upload/Source/UI/LookAndFeel/: PluginColours.h  RotaryKnobLookAndFeel.cpp  RotaryKnobLookAndFeel.h  SafeToolboxLookAndFeel.cpp  SafeToolboxLookAndFeel.h  Theme.h
Safe-Toolbox-GitHub-Upload/Tests/: PresetTests.cpp  ProcessorTests.cpp  SafetyTests.cpp
Safe-Toolbox-GitHub-Upload/docs/: README.md  codex-next-step.md  current-task.md  known-issues.md  release-handoff.md  review-log.md  roadmap.md  standup-notes.md
Safe-Toolbox-GitHub-Upload/scripts/: install_au.sh
